Get user's details.
